action list. some tidying up

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -13,20 +13,19 @@
     "\n",
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
     "\n",
-    "Here you will use the knapsack problem to learn about Pareto Fronts.\n",
+    "Here you will use the Knapsack Problem to learn about Pareto Fronts.\n",
     "\n",
     "**Main Take Aways**.   \n",
-    "* Multi-objective optimisation terms: what *Decision Spaces* and *Objective Spaces* are and how to define these for the knapsack problem.\n",
-    "* The limitations of Single Objective Optimisation.  \n",
-    "* Pareto Fronts: Identifying by eye Pareto optimal solutions within a distribution as well as pseudocode for selecting these non-dominated solutions.\n",
+    "* Optimisation concepts *Decision Spaces* and *Objective Spaces*: you will learn what they are and how to define these for the knapsack problem.\n",
+    "* The limitations of the commonly practiced Single Objective Optimisation.  \n",
+    "* Pareto Fronts: identifying by eye Pareto optimal solutions within a distribution as well as pseudocode for selecting these *Non-Dominated* solutions.\n",
     "\n",
     "\n",
     "\n",
     "**The Knapsack Problem**   \n",
-    "In this challenge we will fill virtual knapsacks with packages that have monetary value and weight, \n",
-    "where our objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
-    "(You will also be able to change the objectives from min-max to max-max or any other combination.) \n",
-    "\n"
+    "In this challenge you will fill virtual knapsacks with packages that have monetary value and weight.   \n",
+    "The objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
+    "(You will also be able to change the objectives from min-max to max-max and min-min.)"
    ]
   },
   {
@@ -61,9 +60,10 @@
     "    \n",
     "</ul>\n",
     "    \n",
+    "In the first run there is no need to understand every line of python! Reading the cell headers is sufficient to understand what a cell does.  It is more important to understand the text in the Markdown cells and the visuals created.  \n",
     "\n",
-    "Throughout you will see ***CHANGE ME!*** next to variables that are worth exploring. In the notebook you will see recommendation of how to change them, but feel free to be creative!\n",
-    "\n",
+    "We recommend doing the first run until the [Summary](#Summary) section as is. \n",
+    "Afterwhich we recommend that you explore different types of results by modfiying the variables flagged with ***CHANGE ME!***. We list in the [Summary](#Summary) section suggested actions to take , but feel free to be creative!\n",
     "\n",
     "**Note!**  \n",
     "For simplicity, in this notebook, we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
@@ -124,7 +124,7 @@
     "\n",
     "<img src=\"https://uk.packsize.com/wp-content/uploads/sites/11/2015/05/wp-boxes.jpg\" width=300>\n",
     "\n",
-    "Here we create packages by defining for each of package its weight and monetary value according to a distribution.   \n",
+    "Here we create packages by defining for each its weight and monetary value according to a distribution.   \n",
     "\n",
     "Parameters of interest:  \n",
     "* `N_PACKAGES` - the total number packages to choose from.  \n",
@@ -347,14 +347,14 @@
    "source": [
     "## Knapsacks\n",
     "\n",
-    "Here we will create the knapsacks\n",
+    "Here we will create the `n_combinations`. knapsacks\n",
     "\n",
     "\n",
     "\n",
     "<img src=\"https://www.chatelaine.com/wp-content/uploads/2019/07/5-most-popular-backpacks-feature.jpg\" width=500>\n",
     "\n",
     "\n",
-    "Each knapsack contains one possible combination of packages. "
+    "Each knapsack contains one possible combination of `N_PACKAGES_PER_KNAPSACK` of `N_PACKAGES` packages. "
    ]
   },
   {
@@ -368,7 +368,7 @@
    },
    "outputs": [],
    "source": [
-    "# Creating a generator of all the possible knapsacks\n",
+    "# Creating a generator object of all the possible knapsacks\n",
     "\n",
     "# NOTE! Only run this if the number of combinations (as calculated above) is of the order <10,000.\n",
     "# Beyond that the method used in this notebook might take a long time.\n",
@@ -870,7 +870,10 @@
     "    if is_pareto:\n",
     "        pareto_front.append(this_knapsack)     \n",
     "--- end ---\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Note**  \n",
+    "Our focus is on two objectives, but this is easily generalised to more by adding lines:  `other_dominates &= ...`. \n"
    ]
   },
   {
@@ -916,7 +919,7 @@
    },
    "outputs": [],
    "source": [
-    "# The Pareto Fron calculation\n",
+    "# The Pareto Front calculation\n",
     "\n",
     "idxs_pareto = []  # stores the indices of the Pareto optimal knapsacks\n",
     "\n",
@@ -1022,6 +1025,8 @@
     }
    ],
    "source": [
+    "# visualising the Decision Space. each panel emphasises the packages for one Pareto optimal knapsack\n",
+    "\n",
     "max_panels = 8\n",
     "if len(idxs_pareto) > max_panels:\n",
     "    np.random.seed(seed)\n",
@@ -1070,42 +1075,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Actions To Take**\n",
-    "\n",
-    "* Create your own distribution! Create your own custom `value_distribution_mode` in [Packages](#Packages). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Decision Making With Pareto Fronts\n",
-    "\n",
-    "Once the Pareto Front is identified it is your job as the analyst to present \n",
-    "these results to the domain expert to discuss the next steps of the experiment/process.  \n",
-    "(Note: you the analyst might be that domain expert!)*  \n",
-    "\n",
-    "\n",
-    "Most likely the domain expert will weigh in a subjective decision which will be dependent on:\n",
-    "* The number of solutions may be used for the next step. In our example, you might have four knapsack carriers, so you will want to give each one knapsack.   \n",
-    "* After seeing the exhaustive solution space how the domain expert might weigh the objectives. \n",
-    "* The expert might decide to narrow in on solutions in a given regions, or multiple regions or just sample along the Pareto Front.  \n",
-    "\n",
-    "\n",
-    "*For your own amusement (and education) I highly recommend watching [The Expert](https://www.youtube.com/watch?v=ObA9WGiQqLY&ab_channel=Adnan). This was recommended to me in my transition from academia to the private sector, and is an excellent life lesson on (mis)communication in a professional environment.  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exhaustive Search Summary\n",
+    "# Summary\n",
     "\n",
     "Here we summarise the lessons from our brute force aproach to exploring the solution space.\n",
     "\n",
     "* Exposing all the solutions to the domain expert will enable a wider a more educated decision about the next step of the experiment.\n",
     "\n",
-    "* If we a-priori go for Single Objective Optimisation we are likely to blindly select a solution that a domain expert might not consider optimal.\n",
+    "* If we a-priori go for Single Objective Optimisation we are likely to blindly select a solution that a domain expert might otherwise not consider optimal.\n",
     "\n",
     "* To avoid this issue it is better to make the subjective decision of one (or more) optimal after exploring the full solution space.\n",
     "\n",
@@ -1118,13 +1094,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rerun With A Larger Search Space?\n",
+    "Congratulations! \n",
+    "You have just learned the fundamentals of Pareto Fronts.\n",
     "\n",
-    "In this tutorial we focused on learning about the Pareto Front in a setting where we have access to the full solution space.  \n",
+    "To further grasp some of the points made, you are encouraged to explore different distributions and set different objectives. Below is a a suggested list of actions you can take to further learn the topic. Choose one that seems interesting to you, update the notebook and rerun the cells to see how the results vary.\n",
     "\n",
-    "In reality, however, you will deal with much larger combinatorial spaces.  \n",
+    "**Actions To Take**\n",
     "\n",
-    "Play around with this calculator to see how large Knapsack problem is by modfiying `N_PACKAGES` and `N_PACKAGES_PER_KNAPSACK`.  "
+    "- [ ] Change the optimisation objective to minimising weight and monetary value.   \n",
+    "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}` in [Optimisation Objective](#Optimisation-Objective).   \n",
+    "Try to guess in advance which knapsacks are considered Pareto Optimal!   \n",
+    "Try all four combinations.  \n",
+    "- [ ] Examine the $value\\sim weight^2$ distribution by modifying `value_distribution_mode=\"squared\"` in [Packages](#Packages).\n",
+    "- [ ] Create your own distribution! Create your own custom `value_distribution_mode` in [Packages](#Packages). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Making With Pareto Fronts\n",
+    "\n",
+    "Once the Pareto Front is identified a decision has to be made about selection of the $N$ best solutions.  \n",
+    "In other words, now is the time to apply a subjective decsion which will determine how we rank the solutions.  \n",
+    "\n",
+    "How to select, of course, will depend on the project budget and objectives but broadly speaking the subjective decision will be determined by:\n",
+    "\n",
+    "* The $N$ number of solutions that will be used for the next step. In our example, you might have four knapsack carriers, so you will want to give each one knapsack.   \n",
+    "* After examining the exhaustive solution space the decision maker might apply weights. This results in a single heuristic reducing the problem to Single Objective Optimisation. \n",
+    "* The decision maker might decide to narrow in on solutions in one or multiple regions. Otherwise they could sample across the Pareto Front.  \n",
+    "\n",
+    "**Note**  \n",
+    "Here the term *decision maker* is used broadly. The meaning is someone with domain expertise who could be anyone from the analyst, to someone non technical that understands the field. \n",
+    "\n",
+    "\n",
+    "**Note 2**  \n",
+    "Here we focus on an Objective Space that has two parameters ($2D$). Ideas here can be naturally extrapolated to higher dimensions (3 or more objectives), although this might be more challenging to visualise. One mechanism is visualising 2D slices, and color coding a 3rd dimension.   \n",
+    "\n",
+    "\n",
+    "*For your own amusement (and education) I highly recommend watching [The Expert](https://www.youtube.com/watch?v=ObA9WGiQqLY&ab_channel=Adnan). This was recommended to me in during transition from academia to the private sector, and is an excellent life lesson on (mis)communication in a professional environment.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Up: Rerun With A Larger Search Space!\n",
+    "\n",
+    "In this tutorial we focused on learning about the Pareto Front in an exhaustive search setting, i.e, where we can brute force our way to the full solution space.  \n",
+    "\n",
+    "In reality, however, you are likley to deal with much larger combinatorial spaces.  \n",
+    "\n",
+    "Play around with this calculator to see how large the Knapsack problem can get by modfiying `N_PACKAGES` and `N_PACKAGES_PER_KNAPSACK`.  "
    ]
   },
   {
