--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -25,7 +25,7 @@
     "**The Knapsack Problem**   \n",
     "In this challenge you will fill virtual knapsacks with packages that have monetary value and weight.   \n",
     "The objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
-    "(You will also be able to change the objectives from min-max to max-max and min-min.)"
+    "(You will also be able to change the objectives from min-max to the other options: max-max and min-min, max-min.)"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "    \n",
     "<details>\n",
     "        <summary>Decision and Objective Spaces</summary> \n",
-    "            These are concepts of multi-objective optimisation that have not been introduced in the previous videos  (but will appear in summary video).<br>Try to understand what they are and how they relate to the knapsack problem.  \n",
+    "            These optimisation concepts have not been introduced in the previous videos (but will appear in summary video).<br>Try to understand what they are and how they relate to the knapsack problem.  \n",
     "</details>\n",
     "    \n",
     "<details>\n",
@@ -60,10 +60,10 @@
     "    \n",
     "</ul>\n",
     "    \n",
-    "In the first run there is no need to understand every line of python! Reading the cell headers is sufficient to understand what a cell does.  It is more important to understand the text in the Markdown cells and the visuals created.  \n",
+    "There is no need to understand every line of Python, especially in the first run! Reading the cell headers is sufficient to understand what a cell does.  It is more important to understand the text in the Markdown cells and the visuals created.  \n",
     "\n",
     "We recommend doing the first run until the [Summary](#Summary) section as is. \n",
-    "Afterwhich we recommend that you explore different types of results by modfiying the variables flagged with ***CHANGE ME!***. We list in the [Summary](#Summary) section suggested actions to take , but feel free to be creative!\n",
+    "Afterwhich we recommend that you explore different types of results by modfiying the variables flagged with ***CHANGE ME!***. We list in the [Summary](#Summary) section suggested actions to take, but feel free to be creative!\n",
     "\n",
     "**Note!**  \n",
     "For simplicity, in this notebook, we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
@@ -257,9 +257,9 @@
    "source": [
     "#  Decision Space\n",
     "\n",
-    "In multi-objective optimisation the ***Decision Space*** is defined as the parameters over which the user has control.   \n",
+    "In optimisation the ***Decision Space*** is defined as the parameters which the user has control over.   \n",
     "\n",
-    "In the knapsack problem we have control over which packages to put in a knapsack - this is our decision to make.  \n",
+    "In the knapsack problem we have decide which packages to put in a knapsack.    \n",
     "\n",
     "If the number of possible package combinations is small enough we can examine (by brute force) all possible knapsacks created by the packages. That is the objective of this notebook. (In the subsequent tutorial we will discuss optimising in an intractable decision space.)  "
    ]
@@ -270,12 +270,12 @@
    "source": [
     "## Decision Space Size\n",
     "\n",
-    "`N_PACKAGES_PER_KNAPSACK` determines that number of packages that fit into a knapsack.  \n",
-    "Along with the `N_PACKAGES` parameter there is a finite number of knapsacks that may be generated.  \n",
+    "There are two parameters of interest that decide how many knapsacks are possible: \n",
+    "* `N_PACKAGES` which was determined in [Packages](#Packages).\n",
+    "* `N_PACKAGES_PER_KNAPSACK` introduced here determines the number of packages that fit into a knapsack.  \n",
     "\n",
-    "We can easily calculate the number of combinations defined as an unordered arrangement of $k$ objects from a set of $n$, which is called  \n",
     "\n",
-    "*$n$ choose $k$*\n",
+    "We can easily calculate the number of combinations defined as an unordered arrangement of $k$ objects from a set of $n$, which is called  *$n$ choose $k$*.  \n",
     "\n",
     "which is calculated as:  \n",
     "$$\n",
@@ -291,12 +291,12 @@
     "\n",
     "**Note**  \n",
     "You do not need to understand the equation above.  \n",
-    "Below you are provided with. \n",
-    "* a calculator that runs this equation using the python `math.factorial` function   \n",
+    "Below you are provided with:   \n",
+    "* a calculator that executes this equation using the `math.factorial` function   \n",
     "* `itertools.combinations` function that creates all *n-choose-k* combinations. \n",
     "\n",
     "**Important!**   \n",
-    "To use `itertools.combinations` to create all *n-choose-k* combinations make sure that the calculator results in a reasonable amount of combinations that you computer can handle. Prior to quantum computing 10,000 should be sufficient. Above that your processor might struggle.  "
+    "To use `itertools.combinations` to create all *n-choose-k* combinations make sure that the calculator results in a reasonable amount of combinations that you computer can handle. Prior to quantum computing 10,000 should be sufficient. Above that a single processor might struggle to run this notebook.  "
    ]
   },
   {
@@ -354,7 +354,7 @@
     "<img src=\"https://www.chatelaine.com/wp-content/uploads/2019/07/5-most-popular-backpacks-feature.jpg\" width=500>\n",
     "\n",
     "\n",
-    "Each knapsack contains one possible combination of `N_PACKAGES_PER_KNAPSACK` of `N_PACKAGES` packages. "
+    "Each knapsack contains one possible combination of `N_PACKAGES_PER_KNAPSACK` packages (of the total `N_PACKAGES` packages). "
    ]
   },
   {
@@ -438,7 +438,7 @@
     "**Interim Checkpoint**\n",
     "\n",
     "Can you define:  \n",
-    "* What is the Decision Space in multi-objective optimisation? \n",
+    "* What is the Decision Space? \n",
     "* What is the Decision Space for the knapsack problem?  \n",
     "\n",
     "Bonus question:  \n",
@@ -451,14 +451,16 @@
    "source": [
     "# Objective Space\n",
     "\n",
-    "In multi-objective optimisation the ***Objective Space*** is defined as the parameters we are interested in optimising.  \n",
-    "\n",
-    "The Objective Space is related to the Decision Space via a mapping.\n",
+    "In optimisation the ***Objective Space*** is defined as the parameters we are interested in optimising for.  \n",
     "\n",
     "\n",
     "<img src=\"https://user-images.githubusercontent.com/6064016/97779521-7bada300-1b76-11eb-9ab9-c1aa2eaad477.png\" width=500>\n",
     "\n",
-    "In the knapsack problem we define the Objective Space as the weights of the knapsacks and their content monetary value. The mapping from the Decision Space (the packages in each knapsack) is covered in this section using the `knapsack_objective` function.  \n",
+    "The Objective Space is related to the Decision Space via a mapping.\n",
+    "\n",
+    "In the knapsack problem we define the Objective Space as the weights of the knapsacks and their content monetary value.   \n",
+    "\n",
+    "The mapping from the Decision Space (the packages in each knapsack) is covered in this section using the `knapsack_objective` function.  \n",
     "\n",
     "Image by [Zitzler et al. (2014)](https://link.springer.com/chapter/10.1007/978-3-642-17144-4_1). "
    ]
@@ -524,11 +526,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examine the distribution of Knapsacks in the Objective Space of weight and values.  \n",
+    "Examine the distribution of knapsacks in the Objective Space of weight and values.  \n",
     "Assuming that you want to minimise the knapsack weight and maximise the value:  \n",
     "\n",
-    "* Which one knapsack would you consider optimal?\n",
-    "* If you had a budget for 5 knapsacks, which ones would you choose as the most optimal?"
+    "* Which one knapsack would you consider \"optimal\"?\n",
+    "* If you had a budget for 5 knapsacks, which ones would you choose as \"the best\"?"
    ]
   },
   {
@@ -537,11 +539,13 @@
    "source": [
     "# Optimisation Objective\n",
     "\n",
-    "In this tutorial of the knapsack problem we want to optimise for two objectives:    \n",
+    "In the knapsack problem we want to optimise for two objectives:    \n",
     "* ↓ minimise the knapsack weight \n",
     "* ↑ maximise the moentary values of the packages in the knapsack\n",
     " \n",
-    "In the default setting here is ↓↑, but feel free to explore the other combinations: ↓↓, ↑↓ or ↑↑. (See the ***CHANGE ME!*** for `objective_mode`).    "
+    " \n",
+    "**Note**    \n",
+    "The default setting here is ↓↑, but feel free to explore the other combinations: ↓↓, ↑↓ or ↑↑. (See the ***CHANGE ME!*** for `objective_mode`).    "
    ]
   },
   {
@@ -577,11 +581,10 @@
    "source": [
     "# These objects are used to calculate the relationships between the knapsacks.\n",
     "\n",
-    "\n",
     "# for Single Objective Optimisation\n",
     "direction_to_multiplier = {'min': div, 'max': mul}\n",
     "\n",
-    "# for Pareto Front selection\n",
+    "# for Pareto Optimal selection\n",
     "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
     "objective_operator = {key: mode_to_operator[objective_mode[key]] for key in objective_mode.keys()}"
    ]
@@ -679,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our optimal knapsack will be the one with the maximum value of the heuristic.  \n",
+    "The single objective optimal knapsack will be the one with the maximum value of the heuristic.  \n",
     "We'll find which one this is here. "
    ]
   },
@@ -735,7 +738,7 @@
     "\n",
     "Whereas this technique is quite intuitive, easy to apply and broadly used, it comes with one main flaw:\n",
     "\n",
-    "> It limits the view of the objective space, likely to result in suboptimal results.  \n",
+    "> It limits the view of the objective space, possibly resuting in suboptimal results.  \n",
     "\n",
     "In other words, this procedure is stopping short from a true in-depth exploration of that decision-objective spaces.   \n",
     "The 1D histogram above is the equivalent of horse blinders. \n",
@@ -808,7 +811,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pareto Optimal\n",
+    "In the above we see that the Single Objective Optimiser selected one regions of possible interest, but perhaps we can do better? Pareto Fronts help us gauge better decisions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pareto Optimal Solutions\n",
     "Here you will apply and visualise a Pareto Front algorithm to find solutions that are called *Pareto Optimal*.\n",
     "\n",
     "\n",
@@ -816,15 +826,17 @@
     "\n",
     "An alternative approach is to be agnostic, where we treat the objectives as independent/orthogonal. In most real life problems we do not know the relationships between the objectives. E.g, imagine in the case of the knapsack problem that we do not know the monetary value of the weight.   \n",
     "\n",
-    "This means that we can examine the actual distribution in the Objective Space and find solutions (knapsacks) that are non-dominated, which we call Pareto Optimal.  \n",
+    "This means that we can examine the actual distribution in the Objective Space and find solutions (knapsacks) that are *Non Dominated*, which we call *Pareto Optimal*.  \n",
     "\n",
     "Let's define these using the diagram below in which we want to maximise for both objectives.\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/2/27/Pareto_Efficient_Frontier_1024x1024.png\" width=300>\n",
     "\n",
-    "* ***Dominated*** solutions (in gray) are those for which we can find at least one other solution that dominates in all objectives. E.g, solution $K$ is dominated by solution $D$ which has higher values in both objectives. There are actually 3 more solutions that dominate $K$. Can you identify all of them?  \n",
+    "* ***Dominated*** solutions (in gray) are those for which we can find at least one other solution that dominates in all objectives.  \n",
+    "E.g, solution $K$ is dominated by solution $D$ which has higher values in both objectives. There are actually 3 more solutions that dominate $K$. Can you identify all of them?  \n",
     "\n",
-    "* ***Non Dominated*** solutions (in red; also called ***Pareto Optimal***) are those for which there is no other solution that dominates it. E.g, solution $C$ is dominated by $B$ in the objective 2, but not by objective 1. Solution $D$ dominates $C$ by objective 1 but not by 2. \n",
+    "* ***Non Dominated*** solutions (in red; also called ***Pareto Optimal***) are those for which there is no other solution that dominates it in all the objectives.  \n",
+    "E.g, solution $C$ is not dominated by any other solution in respect to all the objectives. It is dominated by $B$ in the objective 2, but not by objective 1. Solution $D$ dominates $C$ by objective 1 but not by 2. Solutions $B$ and $D$  do not dominate $C$ in both and hence the latter is considered Pareto Optimal. \n",
     "\n",
     "**Pareto Front**\n",
     "\n",
@@ -832,7 +844,9 @@
     "\n",
     "\n",
     "\n",
-    "Named after the engineer and economist [Vilfredo Pareto](https://en.wikipedia.org/wiki/Vilfredo_Pareto), we define the Pareto Front as the set of Non Dominated solutions, and consider them as equally optimal trade-off solutions.\n",
+    "Named after the engineer and economist [Vilfredo Pareto](https://en.wikipedia.org/wiki/Vilfredo_Pareto), we define the Pareto Front as the set of Non Dominated solutions, and consider them (at first*) as equally optimal trade-off solutions.\n",
+    "\n",
+    "*We will eventually have to apply a subjective ranking. This will be decissed in [Decision Making With Pareto Fronts](#Decision-Making-With-Pareto-Fronts). \n",
     "\n",
     "Now that we know what Pareto Optimal solutions are let's see how we calculate them.  \n",
     "\n",
@@ -853,7 +867,7 @@
     "pareto_front = []\n",
     "\n",
     "for this_knapsack in knapsacks:\n",
-    "    is_pareto = True   # we assume knapsack on the Pareto Front until proven otherwise\n",
+    "    is_pareto = True   # we assume that this_knapsack is Pareto Optimal until proven otherwise\n",
     "    \n",
     "    other_knapsacks = knapsacks.remove(this_knapsack)\n",
     "    \n",
