updating the summary section

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -1093,15 +1093,13 @@
     "\n",
     "Here we summarise the lessons from our brute force aproach to exploring the solution space.\n",
     "\n",
-    "* Exposing all the solutions to the domain expert will enable a wider a more educated decision about the next step of the experiment.\n",
+    "* During the optimisation process we are required to make a subjective decision in regards to selection of the \"optimal\" or \"best\" solution(s).  \n",
     "\n",
-    "* If we a-priori go for Single Objective Optimisation we are likely to blindly select a solution that a domain expert might otherwise not consider optimal.\n",
+    "* In the Single Objective Optimisation approach we make an a-priori decision about the relationships between the objectives. This exposes the decision maker to a narrow point of view of the options, which might result in a choice that, otherwise, might be considered sub-optimal.  \n",
     "\n",
-    "* To avoid this issue it is better to make the subjective decision of one (or more) optimal after exploring the full solution space.\n",
+    "* To avoid this issue it is recommended to first treat the objectves as independent, which will enable examination of the full Objective Space. This is likely to result in a better decision.  \n",
     "\n",
-    "* A useful tool for decision makeing is The Pareto Front, a set of equally-optimal trade-off solutions.  \n",
-    "\n",
-    "* A solution is Pareto Optimal if it is not dominated by any other solution in all objectives.  \n"
+    "* To this end, a useful tool for decision makeing is The Pareto Front, which is defined a set of equally-optimal trade-off Non Dominated (Pareto Optimal) solutions.  \n"
    ]
   },
   {
@@ -1115,7 +1113,7 @@
     "\n",
     "**Actions To Take**\n",
     "\n",
-    "- [ ] Change the optimisation objective to minimising weight and monetary value.   \n",
+    "- [ ] Change the optimisation objective to minimising both weight and monetary value.   \n",
     "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}` in [Optimisation Objective](#Optimisation-Objective).   \n",
     "Try to guess in advance which knapsacks are considered Pareto Optimal!   \n",
     "Try all four combinations.  \n",
