minor annotation update

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -131,7 +131,11 @@
     "* `value_distribution_mode` - indicates the relationship between the package weight and monetary value.   \n",
     "The weights are randomly distributed where: \n",
     "    * `value_distribution_mode=random` - monetary value distribution also random\n",
-    "    *  `value_distribution_mode=squared` - monetary value is squared that of the weights (up to some noise quantified by `noise_factor`).  "
+    "    *  `value_distribution_mode=squared` - monetary value is squared that of the weights (up to some noise quantified by `noise_factor`).  \n",
+    "    \n",
+    "This will results in \n",
+    "* `packages` a dictionary containing information of the `N_PACKAGES` packages.\n",
+    " It has the form `{key: package}`, where each package have the form `{'weight': weight, 'value': value}`"
    ]
   },
   {
