--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "## Knapsacks\n",
     "\n",
-    "Here we will create the `n_combinations`. knapsacks\n",
+    "Here we will create the `n_combinations` knapsacks.\n",
     "\n",
     "\n",
     "\n",
