comment to pydata participants

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -71,6 +71,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://global.pydata.org/assets/images/logo.png\" width=\"300\">  \n",
+    "\n",
+    "**One final note to PyData Global participants**  \n",
+    "\n",
+    "Don't worry if you don't manage to to go through everything in depth during the allocated time. You will be able to access to this notebook later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -450,6 +461,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -751,14 +769,7 @@
     "\n",
     "Let's examine scatter plots in our full objective space (in our case 2D) to get the birds eye view, which will enable us to see more interesting aspects of the Objective Space than the histogram can.\n",
     "\n",
-    "<img src=\"https://lh3.googleusercontent.com/proxy/pTyGVAH5nnW7rsbmDQDRay0clvQMLD440bq_M_eJtdzp2H-pXj54p4vEe_hTYsVgCEMaWL--w05JHqjgcvwmFU_UJs1LdCpcTdgroc0lsXOCSPVeUP1WM_Lt2cbwnB8wQ0CecXpMTAduIh0SLA\" width=500>\n",
-    "\n",
-    "\n",
-    "\n",
-    " \n",
-    "\n",
-    "\n",
-    "\n"
+    "<img src=\"https://i.ytimg.com/vi/D1gG9aLKXBw/hqdefault.jpg\" width=300>\n"
    ]
   },
   {
