crossover and mutation annotations

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -64,6 +64,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://global.pydata.org/assets/images/logo.png\" width=\"300\">  \n",
+    "\n",
+    "**One final note to PyData Global participants**  \n",
+    "\n",
+    "Don't worry if you don't manage to to go through everything in depth during the allocated time. You will be able to access to this notebook later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 148,
    "metadata": {
@@ -807,7 +818,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cross Over Algorithm"
+    "## Cross Over Algorithm\n",
+    "\n",
+    "One of two transformation functions used in the Genetic Algorithm.  \n",
+    "\n",
+    "![crossover](https://user-images.githubusercontent.com/6064016/97842646-dc0c2400-1cdf-11eb-8b59-f0c70274d606.png)\n",
+    "\n",
+    "This image uses DNA snippets to illustrate the how the crossover tranformation may be generate two children solutions from two parents.  \n",
+    "\n",
+    "In this analogy:  \n",
+    "* The DNA strip corresponds to a knapsack\n",
+    "* The nucleotides (`A`, `C`, `G`, `T`) correspond to the packages (except for the fact that we are using unique packages).\n"
    ]
   },
   {
@@ -839,9 +860,6 @@
     "    \n",
     "    mutuals = list(set(ind1) & set(ind2))\n",
     "    \n",
-    "    #ind1_ = ind1.copy()\n",
-    "    #ind2_ = ind2.copy()\n",
-    "    \n",
     "    non_overlap1 = [ind for ind in ind1 if ind not in mutuals]\n",
     "    non_overlap2 = [ind for ind in ind2 if ind not in mutuals]\n",
     "    \n",
@@ -853,17 +871,10 @@
     "    ind1_[n_//2:] = non_overlap2[n_//2:]\n",
     "    ind2_[n_//2:] = non_overlap1[n_//2:]\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    ind1_ += mutuals\n",
     "    ind2_ += mutuals\n",
     "    \n",
-    "    return ind1_, ind2_\n",
-    "    \n",
-    "\n",
-    "\n",
-    "#cross_over_2_indvs([1, 2, 3, 4, 5][::-1], [1, 2, 3, 4, 5])\n",
-    "#cross_over_2_indvs(knapsacks_plot['parent 1']['packages'], knapsacks_plot['parent 2']['packages'])"
+    "    return ind1_, ind2_"
    ]
   },
   {
@@ -890,7 +901,7 @@
     }
    ],
    "source": [
-    "# dummy example\n",
+    "# dummy example - for this example we are not using packages in knapsacks but rather characters in a list\n",
     "\n",
     "parent1 =  ['A', 'B', 'C', 'D', 'E']\n",
     "parent2 = [1, 2, 3, 4, 'C']\n",
@@ -900,6 +911,17 @@
     "\n",
     "child1, child2 = cross_over_2_indvs(parent1, parent2)\n",
     "print(f'\\ncrossed over to\\nchild 1: {\", \".join(map(str, child1))}\\nchild 2: {\", \".join(map(str, child2))}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A deeper look**\n",
+    "\n",
+    "* In this dummy example that the `C` appears in both parents and is passed on to both children (rather than one child having two `C`s and the other none). This corresponds to the `mutuals` term in the `cross_over_2_indvs`. \n",
+    "\n",
+    "* Note that in `cross_over_2_indvs` we do not want the items sorted because that is likely to cause drop in diversity (we will discuss this later)."
    ]
   },
   {
@@ -976,20 +998,12 @@
     "        idx_child_counter = idx_start\n",
     "        \n",
     "    for idx_parent1, idx_parent2 in zip(idxs_parent1, idxs_parent2):\n",
-    "        #print(population[idx_parent1]['packages'])\n",
-    "        #print(population[idx_parent2]['packages'])\n",
-    "        #print('-' * 40)\n",
     "        idx_child_counter += 1\n",
     "        children[idx_child_counter] = {}\n",
     "        children[idx_child_counter + 1] = {}\n",
     "        \n",
     "        children[idx_child_counter]['packages'], children[idx_child_counter + 1]['packages'] = cross_over_2_indvs(population[idx_parent1]['packages'], population[idx_parent2]['packages'])\n",
     "        \n",
-    "        #for idx_child in children:\n",
-    "        #    for objective in objectives:\n",
-    "        #        children[idx_child]['objective'] = knapsack_objective(children[idx_child], objective, packages)\n",
-    "        \n",
-    "       \n",
     "        idx_child_counter += 1\n",
     "    \n",
     "    return children\n",
@@ -1092,7 +1106,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mutation"
+    "## Mutation\n",
+    "\n",
+    "![mutation](https://user-images.githubusercontent.com/6064016/97843727-b54eed00-1ce1-11eb-943f-c725b7fc49ed.png)\n",
+    "\n",
+    "\n",
+    "Hera again we DNA snippets to illustrate the how the mutation tranformation may be applied to one parent solutions to generate one child."
    ]
   },
   {
